@@ -1,5 +1,5 @@
 === Opus Primus changelog.txt ===
-Last revised April 10, 2013
+Last revised April 11, 2013
 Please note, the Opus Primus copyright can be found at the end of this file.
 
 == Version 1.2 ==
@@ -9,6 +9,9 @@ Please note, the Opus Primus copyright can be found at the end of this file.
 * Added filtered `comment_form_required_field_glyph` method in Comments class
 * Added multiple filters to handle the elements of the post byline phrases
 * Added `opus_display_exif_table_header_text` filter
+* Added `opus_archive_image_title` filter
+* Added `opus_archive_image_excerpt` filter
+* Added `opus_archive_image_content` filter
 * Added sanity conditional check to eliminate potential duplicate body classes
 * Changed post thumbnail on pages to full size image and align to the center
 * Changed comment fields into an unordered list
